add caching to controller